syntax = "proto3";

package kallax.tracker;

message PeerAddress { string address = 1; }
